# F1-GP-GOMEA

./: .env.sample  .gitignore  README.md  deapgptest.py  install_frams.sh  installgraphviz.bat  pyproject.toml  ruff.toml  run_ea_simple.py  run_ea_simple.sh  run_experiments.sh  run_gomea_f1.py  run_gomea_f1_supop.py  show_data.ipynb  test.ipynb
framspy/: FramsticksLib.py  README.txt  deterministic.sim  eval-allcriteria.sim  eval-once.sim  f1_params.sim  frams-test.py  frams.py  only-body.sim  pyproject.toml  recording-body-coords.sim  run-deap-examples.cmd  sample-period-longest.sim
framspy/src/: FramsticksEvolution.py  FramsticksLibCompetition.py
framspy/src/dissimilarity/: alignmodel.py  density_distribution.py
src/: gomea.py  gpf1.py  linkage.py  our_toolbox.py  stats.py
src/utils/: elitism.py  encoding.py  fpcontrol.py  stopping.py
