[project]
name = "f1-gp-gomea"
version = "0.1.0"
description = "Submission for 2025 GECCO automated design competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "framspy-local-package",
    "numpy>=2.2.6",
    "ipykernel>=6.29.5",
    "scipy>=1.15.3",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
]

[tool.uv.sources]
framspy-local-package = { path = "framspy", editable = true }
